<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_updates"
        android:icon="@drawable/ic_forum_black_24dp"
        android:title="@string/updates" />
    <item
        android:id="@+id/nav_covidcases"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/cases_report" />
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notification" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />




</menu>
