<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            app:showAsAction="always"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_updates"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/updates" />
        <item
            android:id="@+id/nav_covidcases"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/cases_report" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
    </group>


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />

        </menu>
    </item>

</menu>
