<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".bio">

    <Button
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:gravity="center"
        android:textColor="#009688"
        android:padding="20dp"
        android:text="@string/use_password"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_sensor"
        android:textSize="15sp"
        android:layout_below="@id/finger"
        android:layout_margin="10dp"
        android:textColor="#000"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_your_identity"
        android:textColor="#000"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:gravity="center"
        android:fontFamily="@font/roboto_bold"
        android:layout_above="@id/textView21"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/finger"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_margin="20dp"
        android:text="@string/confirm_your_fingerprint_so_covid_19_relief_can_verify_it_s_you"
        android:textSize="20sp" />


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/finger"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_baseline_fingerprint_24" />
</RelativeLayout>