<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    android:fillViewport="true"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".SelectVolunteer"
    android:id="@+id/sv">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_volunteer"
            android:padding="5dp"
            android:background="#218FE6"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_selected"
            android:gravity="center"
            android:background="#E2FFE3"
            android:padding="10dp"
            android:visibility="gone"
            android:textSize="20sp"
            android:textColor="#4CAF50" />

        <SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:queryHint="@string/search_place" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FDFCFC"
            android:id="@+id/role"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:elevation="10dp"
            android:textSize="20sp"
            android:textColor="#C800FF"
            android:text="@string/select_catagory" />


        <ListView
            android:id="@+id/volunteers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:scrollbars="none"
            android:divider="#fff" />



    </LinearLayout>
</ScrollView>